syntax = "proto3";

package profile_to_product;

enum Role {
  INSTRUCTOR = 0;
  COORDINATOR = 1;
  STUDENT = 2;
  admin = 3;
}

message DanceCategoriesIdsRequest {
  repeated int64 id = 1;
};

message DanceCategory {
  int64 id = 1;
  string name = 2;
};

message GetDanceCategoriesResponse {
  repeated DanceCategory dance_categories = 1;
};